build(web): agregar dependencia de Selenium

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- SELENIUM -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.11.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
